--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 url-protocol/build/*
 url-protocol/.vs/*
 url-protocol/Objs/*
+url-protocol/test/Plugins/Protocol.bundle/Contents/Windows64/Protocol.exp
+url-protocol/test/Plugins/Protocol.bundle/Contents/Windows64/Protocol.lib
